force-app/main/default/objects/SPO_FirmOrder__c/SPO_FirmOrder__c.object-meta.xml
<CustomObject>
    <description>All informations about about customization, quote, order following</description>
    <label>Order Line Item</label>
    <nameField>
        <label>Firm Order Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Order Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>