force-app/main/default/objects/SPO_FirmOrder__c/fields/Cancellation_Comment__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Comment__c</fullName>
    <label>Cancellation Comment</label>
    <type>TextArea</type>
</CustomField>