force-app/main/default/objects/SPO_FirmOrder__c/fields/Cancellation_Reason__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Reason__c</fullName>
    <label>Cancellation Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Order_Cancellation_Reason</valueSetName>
    </valueSet>
</CustomField>