force-app/main/default/objects/SPO_FirmOrder__c/fields/Creation_Status__c.field-meta.xml
<CustomField>
    <fullName>Creation_Status__c</fullName>
    <label>Creation Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New Order</fullName>
            </value>
            <value>
                <fullName>Species to Choose</fullName>
            </value>
            <value>
                <fullName>Technical Data to Define</fullName>
            </value>
            <value>
                <fullName>Technical Data to Check</fullName>
            </value>
            <value>
                <fullName>Ready to be Sent</fullName>
            </value>
            <value>
                <fullName>Order to Check/Validate</fullName>
            </value>
            <value>
                <fullName>Leather to Order</fullName>
                <isActive>false</isActive>
                <label>Leather to Order</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>