force-app/main/default/objects/SPO_FirmOrder__c/fields/DistributionStatus__c.field-meta.xml
<CustomField>
    <fullName>DistributionStatus__c</fullName>
    <description>Track&amp;Trace status (transform by ETL)</description>
    <label>Distribution Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Sent from workshop</fullName>
            </value>
            <value>
                <fullName>Received in central WH</fullName>
            </value>
            <value>
                <fullName>Sent from central WH</fullName>
            </value>
            <value>
                <fullName>Received in regional WH</fullName>
            </value>
            <value>
                <fullName>Sent from regional WH</fullName>
            </value>
            <value>
                <fullName>Received in store</fullName>
            </value>
            <value>
                <fullName>Sent to MyPR</fullName>
            </value>
            <value>
                <fullName>Directly shipped to store</fullName>
            </value>
            <value>
                <fullName>Stock Transferred by Supply</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>