force-app/main/default/objects/SPO_FirmOrder__c/fields/ERP__c.field-meta.xml
<CustomField>
    <fullName>ERP__c</fullName>
    <formula>IF(NOT(ISBLANK(ProductCatalogue__c)),
Case(ProductCatalogue__r.Workshop__c,
					&apos;11281&apos;,&apos;JDE&apos;,
					&apos;11201&apos;,&apos;JDE&apos;,
					&apos;12621&apos;,&apos;JDE&apos;,
					&apos;12601&apos;,&apos;JDE&apos;,
					&apos;11221&apos;,&apos;JDE&apos;,
					&apos;12631&apos;,&apos;JDE&apos;,
					&apos;4208037&apos;,&apos;FMS&apos;,
					&apos;4221101&apos;,&apos;FMS&apos;,
					&apos;4203411&apos;,&apos;FMS&apos;,
					&apos;4202403&apos;,&apos;FMS&apos;,
					&apos;4209769&apos;,&apos;FMS&apos;,
					&apos;4209330&apos;,&apos;FMS&apos;,
					&apos;4204034&apos;,&apos;FMS&apos;,
					&apos;4207983&apos;,&apos;FMS&apos;,
					&apos;4202674&apos;,&apos;FMS&apos;,
					&apos;4208769&apos;,&apos;FMS&apos;,
					&apos;4208756&apos;,&apos;FMS&apos;,
					&apos;S005&apos;,&apos;FMS&apos;,
					&apos;S002&apos;,&apos;FMS&apos;,
					&apos;S006&apos;,&apos;FMS&apos;,
					&apos;S007&apos;,&apos;FMS&apos;,
					&apos;S019&apos;,&apos;FMS&apos;,
					&apos;S018&apos;,&apos;FMS&apos;,
&apos;S004&apos;,&apos;FMS&apos;,
&apos;S001&apos;,&apos;FMS&apos;,
					&quot;N/A&quot;),&apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ERP</label>
    <type>Text</type>
</CustomField>