force-app/main/default/objects/SPO_FirmOrder__c/fields/EstimatedLeadTimeTable__c.field-meta.xml
<CustomField>
    <fullName>EstimatedLeadTimeTable__c</fullName>
    <description>In this field we will insert the value of exo/non exo from MIY_LeadTime__c table (inserted in code)</description>
    <label>Estimated Lead Time Table</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>