force-app/main/default/objects/SPO_FirmOrder__c/fields/FirmOrderNumber__c.field-meta.xml
<CustomField>
    <fullName>FirmOrderNumber__c</fullName>
    <description>New Salesforce order number = BriefName__r.OrderNumber__c + LineNumber__c (3 digits). For example, P0235831001 for PERSO (used for T&amp;T to update sub-status) or SP01234567001 (for SPO)
(value will be set by Process Builder when the Firm Order is created)</description>
    <externalId>true</externalId>
    <label>Firm Order Number (technical)</label>
    <length>15</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>