force-app/main/default/objects/SPO_FirmOrder__c/fields/Fluid_Image_Font__c.field-meta.xml
<CustomField>
    <fullName>Fluid_Image_Font__c</fullName>
    <description>Front image of personalized product</description>
    <formula>IF(
AND(
NOT(ISBLANK(FluidRecipeId__c)),
ISNUMBER(FluidRecipeId__c),
LEN(FluidRecipeId__c) = 8
),
&apos;https://configure-imagecomposer.fluidretail.net/recipe/&apos; + FluidRecipeId__c + &apos;/image/Front.jpg&apos;,
IF(
AND(
NOT(ISBLANK(FluidRecipeId__c)),
NOT(ISNUMBER(FluidRecipeId__c)),
UPPER(LEFT(FluidRecipeId__c, 1)) = &apos;T&apos;,
LEN(FluidRecipeId__c) = 8
),
&apos;https://lv-api.3kit.com/api/configurations/&apos; + FluidRecipeId__c + &apos;/image/Front&apos;,
ProductCatalogue__r.Image1Url__c
)
)
/*
IF (
NOT(ISBLANK(FluidRecipeId__c)),
&apos;http://configure-imagecomposer.fluidretail.net/recipe/&apos; + FluidRecipeId__c + &apos;/image/Front.jpg&apos;,
ProductCatalogue__r.Image1Url__c
)
*/</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fluid Image Font</label>
    <type>Text</type>
</CustomField>