force-app/main/default/objects/SPO_FirmOrder__c/fields/Fluid_Image_Top__c.field-meta.xml
<CustomField>
    <fullName>Fluid_Image_Top__c</fullName>
    <description>Top Image of the personalized product</description>
    <formula>IF (
NOT(ISBLANK(FluidRecipeId__c)),
&apos;http://configure-imagecomposer.fluidretail.net/recipe/&apos; + FluidRecipeId__c + &apos;/image/Top.jpg&apos;,
ProductCatalogue__r.Image1Url__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fluid Image Top</label>
    <type>Text</type>
</CustomField>