force-app/main/default/objects/SPO_FirmOrder__c/fields/FluidRecipeId__c.field-meta.xml
<CustomField>
    <fullName>FluidRecipeId__c</fullName>
    <description>Fluid id</description>
    <externalId>true</externalId>
    <label>Fluid Recipe Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>