force-app/main/default/objects/SPO_FirmOrder__c/fields/Fuild_Image_Packshot__c.field-meta.xml
<CustomField>
    <fullName>Fuild_Image_Packshot__c</fullName>
    <description>Packshot image of the personnalized product</description>
    <formula>IF (
NOT(ISBLANK(FluidRecipeId__c)),
&apos;http://configure-imagecomposer.fluidretail.net/recipe/&apos; + FluidRecipeId__c + &apos;/image/Packshot.jpg&apos;,
ProductCatalogue__r.Image1Url__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fuild Image Packshot</label>
    <type>Text</type>
</CustomField>