force-app/main/default/objects/SPO_FirmOrder__c/fields/Incomplete_Order__c.field-meta.xml
<CustomField>
    <fullName>Incomplete_Order__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if required information are missing on a firm order or its related order</description>
    <label>Incomplete Order</label>
    <type>Checkbox</type>
</CustomField>