force-app/main/default/objects/SPO_FirmOrder__c/fields/Init_Planned_Delivery_Date__c.field-meta.xml
<CustomField>
    <fullName>Init_Planned_Delivery_Date__c</fullName>
    <label>Init. Planned Delivery Date</label>
    <type>Date</type>
</CustomField>