force-app/main/default/objects/SPO_FirmOrder__c/fields/Init_Product_Workshop__c.field-meta.xml
<CustomField>
    <fullName>Init_Product_Workshop__c</fullName>
    <description>Initial value for ProductWorkshop__c field</description>
    <label>Init. Product Workshop</label>
    <length>20</length>
    <type>Text</type>
</CustomField>