force-app/main/default/objects/SPO_FirmOrder__c/fields/Init_Product_Workshop_Name__c.field-meta.xml
<CustomField>
    <fullName>Init_Product_Workshop_Name__c</fullName>
    <label>Init. Product Workshop Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>