force-app/main/default/objects/SPO_FirmOrder__c/fields/IsClosed__c.field-meta.xml
<CustomField>
    <fullName>IsClosed__c</fullName>
    <description>[Denodo] Check if an Order Line Item is closed</description>
    <formula>IF (
  CASE (SPO_FirmOrderStatus__c,
				&apos;Cancelled by production&apos;, &quot;true&quot;,
				&apos;Cancelled by store&apos;, &quot;true&quot;,
				&apos;Closed&apos;, &quot;true&quot;,
				&apos;Product delivered to client&apos;, &quot;true&quot;,
				&apos;Sent to MyPR&apos;, &quot;true&quot;,
				&quot;false&quot;
  ) = &quot;true&quot;,
		true,
  false
)</formula>
    <label>Is Closed</label>
    <type>Checkbox</type>
</CustomField>