force-app/main/default/objects/SPO_FirmOrder__c/fields/IsInferiorVmaxDate__c.field-meta.xml
<CustomField>
    <fullName>IsInferiorVmaxDate__c</fullName>
    <formula>IF ( NOT(BEGINS( Name, &apos;SP&apos;)) ,NOW() &lt;= DATETIMEVALUE( ValidatedMaxDate__c ),NOW() &lt;= DATETIMEVALUE(CreatedDate) +3)


/*IF ( NOT(BEGINS( Name, &apos;SP&apos;)) ,TODAY() &lt; DATEVALUE( ValidatedMaxDate__c ),TODAY()&lt; DATEVALUE(CreatedDate) +3)*/</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IsInferiorVmaxDate</label>
    <type>Checkbox</type>
</CustomField>