force-app/main/default/objects/SPO_FirmOrder__c/fields/IsPersoProduct__c.field-meta.xml
<CustomField>
    <fullName>IsPersoProduct__c</fullName>
    <description>If the custom product contains macro-component (For JDE to send the product to the production or to be get in warehouse)</description>
    <formula>IF (
  AND (
    LEFT(ProductSKU__c, 1) = &apos;P&apos;,
    NOT(ISBLANK(FluidRecipeId__c))
  ),
  1,
  0
)</formula>
    <label>Is Perso Product</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>