force-app/main/default/objects/SPO_FirmOrder__c/fields/IsProductRequest__c.field-meta.xml
<CustomField>
    <fullName>IsProductRequest__c</fullName>
    <defaultValue>false</defaultValue>
    <description>[MakeItYours] Make It Yours app edits this field. If Yes, then the Firm Order should be sent to MyPR system</description>
    <label>Is Product Request</label>
    <type>Checkbox</type>
</CustomField>