force-app/main/default/objects/SPO_FirmOrder__c/fields/lock_serial_number__c.field-meta.xml
<CustomField>
    <fullName>lock_serial_number__c</fullName>
    <description>MIY-1754</description>
    <label>Lock Serial Number</label>
    <length>12</length>
    <type>Text</type>
</CustomField>