force-app/main/default/objects/SPO_FirmOrder__c/fields/MIY_ProductionStatus__c.field-meta.xml
<CustomField>
    <fullName>MIY_ProductionStatus__c</fullName>
    <description>Used to reflects SPP order line status in Salesforce</description>
    <label>Production Status (SPP)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>001</fullName>
            </value>
            <value>
                <fullName>555</fullName>
            </value>
            <value>
                <fullName>002</fullName>
            </value>
            <value>
                <fullName>1004</fullName>
            </value>
            <value>
                <fullName>1003</fullName>
            </value>
            <value>
                <fullName>016</fullName>
            </value>
            <value>
                <fullName>017</fullName>
            </value>
            <value>
                <fullName>011</fullName>
            </value>
            <value>
                <fullName>015</fullName>
            </value>
            <value>
                <fullName>007</fullName>
            </value>
            <value>
                <fullName>008</fullName>
            </value>
            <value>
                <fullName>010</fullName>
            </value>
            <value>
                <fullName>019</fullName>
            </value>
            <value>
                <fullName>020</fullName>
            </value>
            <value>
                <fullName>1009</fullName>
            </value>
            <value>
                <fullName>1010</fullName>
            </value>
            <value>
                <fullName>1011</fullName>
            </value>
            <value>
                <fullName>1001</fullName>
            </value>
            <value>
                <fullName>1000</fullName>
            </value>
            <value>
                <fullName>009</fullName>
            </value>
            <value>
                <fullName>013</fullName>
            </value>
            <value>
                <fullName>018</fullName>
            </value>
            <value>
                <fullName>012</fullName>
            </value>
            <value>
                <fullName>003</fullName>
            </value>
            <value>
                <fullName>1005</fullName>
            </value>
            <value>
                <fullName>1006</fullName>
            </value>
            <value>
                <fullName>014</fullName>
            </value>
            <value>
                <fullName>004</fullName>
            </value>
            <value>
                <fullName>1002</fullName>
            </value>
            <value>
                <fullName>777</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>