force-app/main/default/objects/SPO_FirmOrder__c/fields/MIY_ProductionStatusDate__c.field-meta.xml
<CustomField>
    <fullName>MIY_ProductionStatusDate__c</fullName>
    <description>Holds the date and time the status has changed. When the order status changed in SPP, EAI updates in real time the field</description>
    <label>Last production status update</label>
    <type>DateTime</type>
</CustomField>