force-app/main/default/objects/SPO_FirmOrder__c/fields/MIY_ProductionStatusSimple__c.field-meta.xml
<CustomField>
    <fullName>MIY_ProductionStatusSimple__c</fullName>
    <label>Production Status</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>MIY_ProductionStatus__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>To be manufactured</fullName>
            </value>
            <value>
                <fullName>Printing</fullName>
            </value>
            <value>
                <fullName>Preparation</fullName>
            </value>
            <value>
                <fullName>Assembling</fullName>
            </value>
            <value>
                <fullName>Quality control</fullName>
            </value>
            <value>
                <fullName>To be shipped</fullName>
            </value>
            <value>
                <fullName>Canceled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>