force-app/main/default/objects/SPO_FirmOrder__c/fields/MyPR_ID__c.field-meta.xml
<CustomField>
    <fullName>MyPR_ID__c</fullName>
    <externalId>true</externalId>
    <label>MyPR ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>