force-app/main/default/objects/SPO_FirmOrder__c/fields/OrderOwnerId__c.field-meta.xml
<CustomField>
    <fullName>OrderOwnerId__c</fullName>
    <formula>SPO_BriefName__r.OwnerId</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>OrderOwnerId</label>
    <type>Text</type>
</CustomField>