force-app/main/default/objects/SPO_FirmOrder__c/fields/Planned_Delivery_date__c.field-meta.xml
<CustomField>
    <fullName>Planned_Delivery_date__c</fullName>
    <description>Planned Delivery date for Store Users</description>
    <label>Planned Delivery date</label>
    <type>Date</type>
</CustomField>