force-app/main/default/objects/SPO_FirmOrder__c/fields/Planned_Manufacturing_Date__c.field-meta.xml
<CustomField>
    <fullName>Planned_Manufacturing_Date__c</fullName>
    <label>Planned Manufacturing Date</label>
    <type>Date</type>
</CustomField>