force-app/main/default/objects/SPO_FirmOrder__c/fields/Planned_Manufacturing_Date_Comment__c.field-meta.xml
<CustomField>
    <fullName>Planned_Manufacturing_Date_Comment__c</fullName>
    <label>Planned_Manufacturing_Date_Comment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>