force-app/main/default/objects/SPO_FirmOrder__c/fields/PlannedDeliveryDate__c.field-meta.xml
<CustomField>
    <fullName>PlannedDeliveryDate__c</fullName>
    <description>Retained in order to not break reports. Old code available in comment.</description>
    <formula>IF (NOT(ISBLANK(Planned_Manufacturing_Date__c)),
    Planned_Manufacturing_Date__c,

    /* Old formula: */
    IF (NOT(ISBLANK(ProductCatalogue__c)),
       (SPO_BriefName__r.SPO_DepositSentStatusDate__c + Product_Lead_Time_Manufacturing__c),
       (SPO_BriefName__r.SPO_DepositSentStatusDate__c + (SPO_BriefName__r.SPO_EstimatedProductionTimeMonths__c * 7)) 
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Planned Manufacturing Date (Legacy)</label>
    <type>Date</type>
</CustomField>