force-app/main/default/objects/SPO_FirmOrder__c/fields/Product_Configuration__c.field-meta.xml
<CustomField>
    <fullName>Product_Configuration__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product Configuration</label>
    <referenceTo>ProductConfiguration__c</referenceTo>
    <relationshipLabel>Order Line Items</relationshipLabel>
    <relationshipName>Order_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>