force-app/main/default/objects/SPO_FirmOrder__c/fields/Product_Exotic_Leather__c.field-meta.xml
<CustomField>
    <fullName>Product_Exotic_Leather__c</fullName>
    <formula>IF( 
    NOT(ISBLANK(ProductCatalogue__c)), 
    TEXT(ProductCatalogue__r.Exotic_Leather__c), 
    null 
)</formula>
    <label>Product Exotic Leather</label>
    <type>Text</type>
</CustomField>