force-app/main/default/objects/SPO_FirmOrder__c/fields/Product_Image_URL__c.field-meta.xml
<CustomField>
    <fullName>Product_Image_URL__c</fullName>
    <description>URL as Text instead of Image in Product_Image__c</description>
    <formula>IF ( ISPICKVAL( SPO_BriefName__r.ApplicationSource__c , &quot;SPO&quot;), 
SPO_BriefName__r.SPO_BaseSKURefmodelSKU__r.SPO_ImageLink1FrontView__c, 
Fluid_Image_Font__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Image URL</label>
    <type>Text</type>
</CustomField>