force-app/main/default/objects/SPO_FirmOrder__c/fields/Product_Lead_Time_Manufacturing__c.field-meta.xml
<CustomField>
    <fullName>Product_Lead_Time_Manufacturing__c</fullName>
    <formula>IF(NOT(ISBLANK(ProductCatalogue__c)),
     IF(AND(TECH_Product_Exo_Workflow__c , Undefined_Material__c),
         (ProductCatalogue__r.LeadTimeManufacturing__c -  $Setup.OrderSettings__c.Shorten_Crocodilien_Lead_Time__c),

     /* ELSE */
         ProductCatalogue__r.LeadTimeManufacturing__c
     ),

/* ELSE */
     null
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Lead Time Manufacturing</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>