force-app/main/default/objects/SPO_FirmOrder__c/fields/Product_Name__c.field-meta.xml
<CustomField>
    <fullName>Product_Name__c</fullName>
    <formula>IF( NOT(ISBLANK(ProductCatalogue__c)) , ProductCatalogue__r.Name,  SPO_BriefName__r.SPO_BaseSKURefmodelSKU__r.Name)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Name</label>
    <type>Text</type>
</CustomField>