force-app/main/default/objects/SPO_FirmOrder__c/fields/ProductCatalogue__c.field-meta.xml
<CustomField>
    <fullName>ProductCatalogue__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Product used for PERSO app</description>
    <label>Product Catalogue</label>
    <referenceTo>ProductCatalogue__c</referenceTo>
    <relationshipName>Firm_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>