force-app/main/default/objects/SPO_FirmOrder__c/fields/ProductionInProgressDate__c.field-meta.xml
<CustomField>
    <fullName>ProductionInProgressDate__c</fullName>
    <label>ProductionInProgressDate</label>
    <type>Date</type>
</CustomField>