force-app/main/default/objects/SPO_FirmOrder__c/fields/ProductSKU__c.field-meta.xml
<CustomField>
    <fullName>ProductSKU__c</fullName>
    <description>SKU code depending on ProductCatalogue__c value (Perso order) or SPO</description>
    <formula>IF (
  NOT(ISBLANK(ProductCatalogue__c)),
  ProductCatalogue__r.SKU__c, /* Perso order */
  /* SPO_BriefName__r.SPO_SpecialOrderSKUCode__c SPO */
  SPO_BriefName__r.SPO_SpecialOrderSKUCodeRef__r.SKUCode__c /* SPO */
)</formula>
    <label>SKU</label>
    <type>Text</type>
</CustomField>