force-app/main/default/objects/SPO_FirmOrder__c/fields/ProductWorkshop__c.field-meta.xml
<CustomField>
    <fullName>ProductWorkshop__c</fullName>
    <description>Manufacturing workshop code
30.04.2018 =&gt; demande de mettre 11202 par défault
IF ( 
  NOT(ISBLANK(ProductCatalogue__c)),
  TEXT(ProductCatalogue__r.Workshop__c), /* Perso order */
  TEXT(SPO_BriefName__r.Workshop__c)  /* SPO */ 
)</description>
    <formula>IF(NOT(ISBLANK(ProductCatalogue__c)), 
    /* Perso order */
    TEXT(ProductCatalogue__r.Workshop__c), 
    
    /* SPO */
    TEXT(SPO_BriefName__r.Workshop__c)
)</formula>
    <label>Product Workshop</label>
    <type>Text</type>
</CustomField>