force-app/main/default/objects/SPO_FirmOrder__c/fields/REP_At_Risk_Not_In_JDE__c.field-meta.xml
<CustomField>
    <fullName>REP_At_Risk_Not_In_JDE__c</fullName>
    <description>MIY-659 : Set 1 to FirmOrder which are stuck more than 3 days in SF so not retrieved by JDE integration.
This field is used by NY Global follow-up Dashboard and relying reports to pro-actively alert about FO at risk to Business leader (Michael Giraud) and AMS Team (EcoCea, CGI)</description>
    <formula>IF( ((TEXT(SPO_BriefName__r.ApplicationSource__c) =&apos;SPO&apos; &amp;&amp; SPO_BriefName__r.SPO_Date_Creation_in_progress__c &lt; TODAY()-3 &amp;&amp; NOT(ISBLANK(SPO_BriefName__r.SPO_SpecialOrderSKUCodeRef__c)))  ||
			(TEXT(SPO_BriefName__r.ApplicationSource__c) &lt;&gt;&apos;SPO&apos; &amp;&amp; SPO_BriefName__r.CreatedDate &lt; NOW()-3)) &amp;&amp; 
			(TEXT(SPO_BriefName__r.StageName) =&apos;Creation in progress&apos; || TEXT(SPO_BriefName__r.StageName) =&apos;In progress&apos;) &amp;&amp;
			TEXT(SPO_TechETLStatus__c) &lt;&gt;&apos;Y&apos;
			,1 ,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>REP_At Risk Not In JDE</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>