force-app/main/default/objects/SPO_FirmOrder__c/fields/RMS_TransationNumber__c.field-meta.xml
<CustomField>
    <fullName>RMS_TransationNumber__c</fullName>
    <label>RMS transation number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>