force-app/main/default/objects/SPO_FirmOrder__c/fields/Send_Delay_Notification__c.field-meta.xml
<CustomField>
    <fullName>Send_Delay_Notification__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send Delay Notification</label>
    <type>Checkbox</type>
</CustomField>