force-app/main/default/objects/SPO_FirmOrder__c/fields/SPO_BriefName__c.field-meta.xml
<CustomField>
    <fullName>SPO_BriefName__c</fullName>
    <label>Order name</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipName>SpeOrder_Order_Following</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>