force-app/main/default/objects/SPO_FirmOrder__c/fields/SPO_BriefNumber__c.field-meta.xml
<CustomField>
    <fullName>SPO_BriefNumber__c</fullName>
    <formula>SPO_BriefName__r.SPO_BriefCode__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Brief number</label>
    <type>Text</type>
</CustomField>