force-app/main/default/objects/SPO_FirmOrder__c/fields/SPO_CorporateOrder__c.field-meta.xml
<CustomField>
    <fullName>SPO_CorporateOrder__c</fullName>
    <label>Corporate order</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>N</fullName>
                <default>true</default>
                <label>N</label>
            </value>
            <value>
                <fullName>Y</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>