force-app/main/default/objects/SPO_FirmOrder__c/fields/SPO_DistributionStatus__c.field-meta.xml
<CustomField>
    <fullName>SPO_DistributionStatus__c</fullName>
    <description>Champ mis à jour par SAP duquel le statut est mis à jour dans Firm order</description>
    <label>Distribution status</label>
    <length>30</length>
    <type>Text</type>
</CustomField>