force-app/main/default/objects/SPO_FirmOrder__c/fields/SPO_FirmOrderNumber__c.field-meta.xml
<CustomField>
    <fullName>SPO_FirmOrderNumber__c</fullName>
    <externalId>true</externalId>
    <label>Order Line Item Number</label>
    <length>30</length>
    <type>Text</type>
</CustomField>